# _osi_5sem

./: .gitignore  README.md
data/: .~lock.LR2_ispr_i_dop.docx#  .~lock.LR3.docx#  .~lock.LR4.docx#  .~lock.LR5.docx#  LR2_ispr_i_dop.docx  LR3.docx  LR4.docx  LR5.docx
lab2/: client  client.c  makefile  server  server.c
lab2/data/: BD_Coords.txt
lab2/src/: client  client.c  makefile  password   server  server.c  users.txt
lab2/src/src_lib/: calculation.c
lab2/src_lib/: calculation  calculation.c  calculation.h
lab3/: makefile  server.c
lab3/data/: users.txt
lab3/src/: client  client.c  makefile  server.c  server_logs.txt  test  test.c
lab3/src/src_lib/: calculation.c  calculation.h
lab4/: README.md
lab4/data/: BD 0 - 0.07 - 0.01.txt  users.txt
lab4/src/: client.c  main.cpp  server.c
lab5/: README.md
lab5/data/: users.txt
lab5/src/: CMakeLists.txt  client.cpp  server.cpp
lab5/src/src_lib/: CMakeLists.txt  calculation.c  calculation.h
report/: ОСиС_Акмурзин_Михаил_3ЛР.docx  ОСиС_Акмурзин_Михаил_ЛР1.docx
